load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//build_defs/web:next.bzl", "next_app")
load("//build_defs/web:next_oci.bzl", "next_oci_image")
load("//build_defs/web:playwright.bzl", "playwright_test")
load("//build_defs/web:ts.bzl", "ts_project")
load("//build_defs/web:vitest.bzl", "vitest_test")

# Pull every npm dep listed in package.json into a local `node_modules`
# virtual tree that Bazel understands. aspect_rules_js reads the root
# pnpm-lock and hydrates this target lazily.
npm_link_all_packages(name = "node_modules")

# TypeScript sources — everything under src/. tsc runs via the pinned
# TypeScript from MODULE.bazel, not the one in node_modules, so builds
# stay hermetic.
ts_project(
    name = "src",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
        ],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.test.tsx",
        ],
    ),
    declaration = True,
    tsconfig = "tsconfig.json",
    deps = [":node_modules"],
)

# Shared data for the three Next.js modes. Config files + the local
# node_modules link + the Rust-produced WASM package.
_NEXT_DATA = [
    "next.config.ts",
    "postcss.config.mjs",
    "package.json",
    "tsconfig.json",
    ":node_modules",
    "//clients/core/crates/wasm:wasm_pkg",
]

# next_app() and next_oci_image() are TEMPORARILY DISABLED — the
# next_js_binary label format (`:node_modules/next/package:next_bin`) is
# stale with the current aspect_rules_js (2.9.2), which rejects labels
# with more than one colon. Re-enable after resolving the real bin
# target name (likely `:node_modules/next/package/next_bin`).
#
# next_app(
#     name = "next",
#     srcs = [":src"],
#     data = _NEXT_DATA,
#     next_js_binary = ":node_modules/next/package:next_bin",
# )
#
# next_oci_image(
#     name = "image",
#     exposed_ports = ["3000/tcp"],
#     repository = "registry.corp.agentsmesh.ai/web",
#     start_binary = ":next_start_binary",
# )
#
# js_library(
#     name = "web",
#     srcs = [":next"],
#     visibility = ["//visibility:public"],
# )

# Vitest unit + component tests (132 files / 1510 tests as of last run).
# `bazel test //clients/web:unit` is equivalent to `pnpm test:run`.
vitest_test(
    name = "unit",
    size = "large",
    srcs = glob([
        "src/**/*.test.ts",
        "src/**/*.test.tsx",
    ]),
    config = "vitest.config.ts",
    data = [
        "package.json",
        "tsconfig.json",
        ":node_modules",
    ] + glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
            "src/**/*.json",
            "src/**/*.css",
        ],
        allow_empty = True,
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.test.tsx",
        ],
    ),
)

# Playwright e2e targets are split into two:
#   //clients/web:e2e                  — blockstore / rate-limit suite
#                                        (config = clients/web/playwright.config.ts,
#                                         specs live in clients/web/e2e/)
#   //clients/web/e2e-playwright:e2e   — full browser e2e suite (413 tests)
#
# Both need Docker dev stack up. Install browsers once:
#   pnpm exec playwright install chromium
# Run:
#   bazel test //clients/web:e2e //clients/web/e2e-playwright:e2e \
#       --test_tag_filters=e2e
playwright_test(
    name = "e2e",
    srcs = glob(
        [
            "e2e/**/*.spec.ts",
            "e2e/**/*.ts",
        ],
        allow_empty = True,
    ),
    config = "playwright.config.ts",
    data = [
        "package.json",
        "//:node_modules/@playwright/test",
    ],
)
