load("@rules_rust//rust:defs.bzl", "rust_library_group")
load("@rules_rust_prost//:defs.bzl", "rust_prost_toolchain")

# R1 — bridges rules_rust_prost (plugin) with our project-owned
# `@crates//:prost` runtime. The default toolchain that rules_rust_prost 0.70
# self-registers uses its vendored `prost-0.13.1`, which trips Rust's trait
# coherence rules because services / wasm / ffi already pull
# `@crates//:prost` (0.13.5). Same crate source ⇒ one `prost::Message` trait
# instance everywhere.
#
# R2 — proto types that need `serde::Serialize/Deserialize` opt in
# per-package via `rust_prost_transform` in their BUILD.bazel (see
# proto/pod/v1/BUILD.bazel etc.). The toolchain itself stays minimal — it
# only carries the prost runtime + plugin, no global derive injection.

rust_library_group(
    name = "prost_runtime",
    deps = ["@crates//:prost"],
)

rust_library_group(
    name = "prost_types",
    deps = ["@crates//:prost-types"],
)

rust_prost_toolchain(
    name = "prost_toolchain_impl",
    prost_plugin = "@rules_rust_prost//private/3rdparty/crates:protoc-gen-prost__protoc-gen-prost",
    prost_runtime = ":prost_runtime",
    prost_types = ":prost_types",
    # Skip tonic — we use Connect-RPC, not raw gRPC. `tonic_plugin_flag`
    # has a truthy default ("--plugin=protoc-gen-tonic=%s") so we must
    # explicitly blank it to avoid the toolchain rule's
    # "When one tonic attribute is added, all must be added" guard
    # (rules_rust 0.70 upstream bug).
    tonic_plugin_flag = "",
)

toolchain(
    name = "prost_toolchain",
    toolchain = ":prost_toolchain_impl",
    toolchain_type = "@rules_rust_prost//:toolchain_type",
    visibility = ["//visibility:public"],
)
